# wallet-core

./: .clang-format  .clang-tidy  .codacy.yaml  .codebeatignore  .git-credentials  .gitconfig  .gitignore  .gitmodules  .gitpod.yml  .project  .swiftlint.yml  0889181286@TrustWallet.com  0xFe58240284c9Fb7F63a289676543c456591e0523  360027201331 btc - Deposit.html  48164261(1)  BTC_tokens.txt  BUILD  Building.md  CLAUDE.md  CMakeLists.txt  DYDX_GOVERNANCE_IMPLEMENTATION.md  Deposit.xlsx  Dockerfile  GEODB_README.md  HelpMe  IFWalletCore.podspec  LICENSE  LICENSE-3RD-PARTY.txt  Makefile  Package.swift  README.md  SECURITY.MD  SECURITY.md  TrustWalletCore.podspec  Wallet.core.android  WalletCore.podspec  WalletCoreDev.podspec  WalletCoreSwiftProtobuf.podspec  ZATrustWalletCore.podspec  ZAWalletCoreDev.podspec  (+28 more)
codegen-v2/: Cargo.toml  README.md  example.include_manifest.json
codegen-v2/manifest/: TWAES.yaml  TWAESPaddingMode.yaml  TWAccount.yaml  TWAeternityProto.yaml  TWAionProto.yaml  TWAlgorandProto.yaml  TWAnyAddress.yaml  TWAptosProto.yaml  TWBarz.yaml  TWBase32.yaml  TWBase58.yaml  TWBase64.yaml  TWBech32.yaml  TWBech32m.yaml  TWBinanceProto.yaml  TWBitcoinAddress.yaml  TWBitcoinMessageSigner.yaml  TWBitcoinProto.yaml  TWBitcoinScript.yaml  TWBitcoinSigHashType.yaml  TWBlockchain.yaml  TWCardano.yaml  TWCardanoProto.yaml  TWCoinType.yaml  TWCoinTypeConfiguration.yaml  TWCommonProto.yaml  TWCosmosProto.yaml  TWCurve.yaml  TWDataVector.yaml  TWDecredProto.yaml  TWDerivation.yaml  TWDerivationPath.yaml  TWDerivationPathIndex.yaml  TWEOSProto.yaml  TWEthereum.yaml  TWEthereumAbi.yaml  TWEthereumAbiFunction.yaml  TWEthereumAbiValue.yaml  TWEthereumChainID.yaml  TWEthereumMessageSigner.yaml  (+69 more)
codegen-v2/src/: coin_id.rs  grammar.rs  lib.rs  main.rs  manifest.rs  manifest_impl.rs  manifest_impl_custom.rs  reader.rs  registry.rs  utils.rs
modules/base/: CMakeLists.txt  Data.h
protobuf-plugin/: BUILD  CMakeLists.txt  README.md  c_typedef.cc  main.cc  swift_typealias.cc
rust/: .gitignore  BUILD  Cargo.toml  cbindgen.toml  coverage.stats  rust-toolchain.toml  rustfmt.toml
rust/.cargo/: config.toml
rust/.config/: nextest.toml
rust/src/: lib.rs
rust/tw_any_coin/: Cargo.toml
rust/tw_aptos/: Cargo.toml
rust/tw_base58_address/: Cargo.toml
rust/tw_bech32_address/: Cargo.toml
rust/tw_bitcoin/: Cargo.toml
rust/tw_cbor/: Cargo.toml
rust/tw_coin_entry/: Cargo.toml
rust/tw_coin_registry/: Cargo.toml  build.rs
rust/tw_cosmos_sdk/: Cargo.toml  build.rs
rust/tw_crypto/: Cargo.toml
rust/tw_encoding/: Cargo.toml
rust/tw_ethereum/: Cargo.toml
rust/tw_evm/: Cargo.toml
rust/tw_hash/: Cargo.toml
rust/tw_hd_wallet/: Cargo.toml
rust/tw_internet_computer/: Cargo.toml  build.rs
rust/tw_keeper/: Cargo.toml
rust/tw_keypair/: Cargo.toml
rust/tw_keystore/: Cargo.toml
rust/tw_macros/: Cargo.toml
rust/tw_memory/: Cargo.toml
rust/tw_misc/: Cargo.toml
rust/tw_move_parser/: Cargo.toml
rust/tw_number/: Cargo.toml
rust/tw_proto/: Cargo.toml  build.rs
rust/tw_ronin/: Cargo.toml
rust/tw_scale/: Cargo.toml
rust/tw_ss58_address/: Cargo.toml
rust/tw_starknet/: Cargo.toml
rust/tw_substrate/: Cargo.toml
rust/tw_tests/: Cargo.toml
rust/tw_utils/: Cargo.toml
rust/tw_utxo/: Cargo.toml
rust/wallet_core_bin/: Cargo.toml
rust/wallet_core_rs/: Cargo.toml  build.rs  cbindgen.toml
samples/cpp/: CMakeLists.txt  README.md  dydx_governance.cpp  sample.cpp
tests/: .clang-tidy  AddressTests.cpp  AnyAddressTests.cpp  AnySignerTests.cpp  BCSTests.cpp  Base64Tests.cpp  BaseEncoding.cpp  Bech32AddressTests.cpp  Bech32Tests.cpp  BinaryCodingTests.cpp  CB58Tests.cpp  CMakeLists.txt  CTestTestfile.cmake  CborTests.cpp  CoinAddressDerivationTests.cpp  CoinAddressValidationTests.cpp  CoinTests.cpp  DataTests.cpp  DerivationPathTests.cpp  EncryptTests.cpp  HDWalletTests.cpp  HashTests.cpp  HexCodingTests.cpp  Makefile  MnemonicTests.cpp  PrivateKeyTests.cpp  PublicKeyTests.cpp  SignerTests.cpp  SortHelpersTests.cpp  TWAESTests.cpp  TWAlgorithmsTests.cpp  TWBech32AddressTests.cpp  TWBitcoinCashTests.cpp  TWBitcoinScriptTests.cpp  TWBitcoinSigningTests.cpp  TWBitcoinTransactionTests.cpp  TWCoinTypeConfigTests.cpp  TWDataTests.cpp  TWEthereumSignerTests.cpp  TWHDWalletTests.cpp  (+24 more)
tests/ARK/: AddressTests.cpp  SignerTests.cpp  TWCoinTypeTests.cpp
tests/Aeternity/: AddressTests.cpp  SignerTests.cpp  TWAeternityAddressTests.cpp  TWAeternitySignerTests.cpp  TWAnySignerTests.cpp  TWCoinTypeTests.cpp  TransactionTests.cpp
tests/Aion/: AddressTests.cpp  PrivateKeyTests.cpp  RLPTests.cpp  SignerTests.cpp  TWAionSignerTests.cpp  TWAnySignerTests.cpp  TWCoinTypeTests.cpp  TransactionTests.cpp
tests/Algorand/: AddressTests.cpp  SignerTests.cpp  TWAlgorandSignerTests.cpp  TWAnySignerTests.cpp  TWCoinTypeTests.cpp  TransactionCompilerTests.cpp
tests/Any/: SignerTests.cpp
tests/Aptos/: AddressTests.cpp  MoveTypesTests.cpp  SignerTests.cpp  TWAnyAddressTests.cpp  TWAnySignerTests.cpp  TWAptosAddressTests.cpp  TWCoinTypeTests.cpp  TransactionPayloadTests.cpp
tests/Arbitrum/: TWCoinTypeTests.cpp
tests/EOS/: NameTests.cpp  (+7 more)
trezor-crypto/: .gitignore  BUILD  CMakeLists.txt  Makefile  cmake_install.cmake  configure.ac  setup_from_upstream.sh  version
walletconsole/: Buffer.cpp  Buffer.h  CMakeLists.txt  Coins.cpp  Coins.h  CommandExecutor.cpp  CommandExecutor.h  Keys.cpp  Makefile  README.md  Util.cpp  Util.h  WalletConsole.cpp  WalletConsole.h  cmake_install.cmake  main.cpp
wasm/: .gitignore  .mocharc.json  CMakeLists.txt  README.md  WASMBase58.cpp  WASMBase64.cpp  WASMBech32.cpp  WASMBech32Address.cpp  WASMBitcoin.cpp  WASMCoin.cpp  WASMData.cpp  WASMDerivationPath.cpp  WASMEthereum.cpp  WASMHDWallet.cpp  WASMHash.cpp  WASMHexCoding.cpp  WASMMnemonic.cpp  WASMPrivateKey.cpp  WASMPublicKey.cpp  WASMSS58Address.cpp  WASMTWBlockchain.cpp  WASMTWCoinType.cpp  WASMTWCurve.cpp  WASMTWHDVersion.cpp  WASMTWPublicKeyType.cpp  WASMTWPurpose.cpp  WASMauint256.cpp  extension-storage.ts  fs-storage.ts  index.ts  keystore.ts  package-lock.json  package.json  tsconfig.json  wallet-core.d.ts
(+7736 files in other folders)
