[package]
name = "codegen-v2"
version = "0.1.0"
edition = "2021"

[lib]
name = "libparser"
path = "src/lib.rs"

[[bin]]
name = "parser"
path = "src/main.rs"

[dependencies]
aho-corasick = "1.1.2"
convert_case = "0.6.0"
pathdiff = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.21"
toml_edit = "0.21.0"
handlebars = "4.3.6"
heck = "0.4.1"
