[package]
name = "codegen-v2"
version = "0.1.0"
edition = "2021"

[lib]
name = "libparser"
path = "src/lib.rs"

[[bin]]
name = "parser"
path = "src/main.rs"

[dependencies]
aho-corasick = "1.1.4"
convert_case = "0.11.0"
pathdiff = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
toml_edit = "0.22.20"
handlebars = "6.4.0"
heck = "0.5.0"
regex = "1.12.3"
