[workspace]
members = [
    "chains/tw_cosmos",
    "chains/tw_native_evmos",
    "chains/tw_native_injective",
    "chains/tw_thorchain",
    "tw_any_coin",
    "tw_aptos",
    "tw_bech32_address",
    "tw_bitcoin",
    "tw_coin_entry",
    "tw_coin_registry",
    "tw_cosmos_sdk",
    "tw_encoding",
    "tw_ethereum",
    "tw_evm",
    "tw_hash",
    "tw_internet_computer",
    "tw_keypair",
    "tw_memory",
    "tw_misc",
    "tw_number",
    "tw_proto",
    "tw_ronin",
    "tw_utxo",
    "wallet_core_rs",
]

[profile.wasm-test]
inherits = "release"
# Fixes an incredibly slow compilation of `curve25519-dalek` package.
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true

[profile.release.package.curve25519-dalek]
opt-level = 2
