[workspace]
members = [
    "chains/tw_aptos",
    "chains/tw_binance",
    "chains/tw_bitcoin",
    "chains/tw_bitcoincash",
    "chains/tw_cosmos",
    "chains/tw_ethereum",
    "chains/tw_greenfield",
    "chains/tw_internet_computer",
    "chains/tw_native_evmos",
    "chains/tw_native_injective",
    "chains/tw_ronin",
    "chains/tw_solana",
    "chains/tw_sui",
    "chains/tw_thorchain",
    "chains/tw_ton",
    "frameworks/tw_ton_sdk",
    "frameworks/tw_utxo",
    "tw_any_coin",
    "tw_base58_address",
    "tw_bech32_address",
    "tw_coin_entry",
    "tw_coin_registry",
    "tw_cosmos_sdk",
    "tw_encoding",
    "tw_evm",
    "tw_hash",
    "tw_keypair",
    "tw_memory",
    "tw_misc",
    "tw_number",
    "tw_proto",
    "tw_tests",
    "wallet_core_bin",
    "wallet_core_rs",
]

[profile.release]
strip = true
codegen-units = 1
panic = "abort"

[profile.wasm-test]
inherits = "release"
# Fixes an incredibly slow compilation of `curve25519-dalek` package.
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true

[profile.release.package.curve25519-dalek]
opt-level = 2
